--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jquery": "^3.3.6",
     "@types/signalr": "^2.2.35",
     "@types/webrtc": "0.0.23",
+    "cordova-ios": "^6.2.0",
     "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-datepicker": "^0.9.3",
@@ -49,6 +50,9 @@
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova.plugins.diagnostic": "^6.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jquery": "^3.3.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
@@ -74,11 +78,6 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "cordova-ios": "^6.2.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-iosrtc": "^6.0.21",
-    "cordova-plugin-whitelist": "^1.3.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -104,10 +103,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-nativestorage": {},
-      "cordova-plugin-iosrtc": {
-        "MANUAL_INIT_AUDIO_DEVICE": "FALSE"
-      }
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "ios"
