--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.1.2",
-    "@capacitor/haptics": "1.0.2",
-    "@capacitor/keyboard": "1.0.2",
-    "@capacitor/status-bar": "1.0.2",
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/contacts": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
@@ -40,7 +35,6 @@
     "@types/jquery": "^3.3.6",
     "@types/signalr": "^2.2.35",
     "@types/webrtc": "0.0.23",
-    "cordova-ios": "^6.2.0",
     "cordova-plugin-iosrtc": "^6.0.21",
     "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-contacts": "^3.0.1",
@@ -60,7 +54,8 @@
     "signalr": "^2.2.3",
     "tslib": "^2.2.0",
     "webrtc-adapter": "^6.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "typescript": "~4.2.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
@@ -72,7 +67,6 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.1.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -92,20 +86,26 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.2.4"
+    "ts-node": "~8.3.0"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-contacts": {},
       "cordova-plugin-nativestorage": {},
-      "cordova-plugin-iosrtc": {}
+      "cordova-plugin-network-information": {},
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-iosrtc": {
+        "MANUAL_INIT_AUDIO_DEVICE": "FALSE"
+      },
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "ios"
